rearrange head file order

--- a/includes/main-nav.html
+++ b/includes/main-nav.html
@@ -1,13 +1,13 @@
 <nav id="main-nav">
-	<a id="menu" class="">
+	<a id="menu">
 		<div>
 			<span class="bars">
 			</span>
 		</div>
 	</a>
-	<ul class="">
+	<ul>
 		<li>
-			<a href="#header">HOME</a>
+			<a href="#home">HOME</a>
 		</li>
 		<li>
 			<a href="#portfolio">PORTFOLIO</a>
