--- a/includes/head.html
+++ b/includes/head.html
@@ -1,12 +1,12 @@
-<meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta charset="utf-8">
 <title>chrislusk.me | TEST</title>
 <meta name="description" content="Chris Lusk | Designer, Journalist, Developer">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<link rel="icon" href="img/favicon.ico">
-<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,900' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="styles/main.css">
-
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script src="js/script.js"></script>
+<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
+<!--[if lt IE 9]>
+<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+<![endif]-->
+<link rel="icon" href="img/favicon.ico">
