--- a/styles/main.less
+++ b/styles/main.less
@@ -574,7 +574,7 @@ nav#inside-nav {
 					.image {
 						overflow: hidden;
 						position: relative;
-						.transition(all 0.5s cubic-bezier(0.75, 0.25, 0.25, 0.75));
+						//.transition(all 0.5s cubic-bezier(0.75, 0.25, 0.25, 0.75));
 						img {
 							display: block;
 							max-height: 500px;
@@ -632,7 +632,6 @@ nav#inside-nav {
 						.image {
 							img { 
 								.grayscale(0%,none,none,0);
-								.transform(scale(1.1));
 							}
 							&:after {
 								.opacity(0);
