--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,7 @@ header .wrapper .social-links a {
 }
 header .wrapper .social-links a i {
   font-size: 1.5em;
+  position: relative;
   -webkit-transition: color 0.2s ease-out;
   -moz-transition: color 0.2s ease-out;
   -ms-transition: color 0.2s ease-out;
